[package]
name = "blue-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
crossterm = "0.26.1"
futures = "0.3.27"
tokio = "1.26.0"
tui = "0.19.0"
